fix social-icons visibility for safari

--- a/_sass/_social-icons.scss
+++ b/_sass/_social-icons.scss
@@ -3,10 +3,13 @@
   float: none;
 }
 
-.social-icons {
-  font-size: 1.25rem;
-  padding: 0.5em 0 0 0;
-  width: 100%;
+.measure {
+  .social-icons {
+    font-size: 1.25rem;
+    padding: 0.5em 0 0 0;
+    width: 100%;
+    display: block !important;
+  }
 }
 
 .social-icons a.fa {
